# ipa_lawnmower

./: README.md
ipa_lawnmower/: CMakeLists.txt  package.xml
ipa_lawnmower_tracker/: CMakeLists.txt  package.xml
ipa_lawnmower_tracker/common/files/models/: arucoIni_lawnmower.xml  piTagIni_lawnmower.xml
ipa_lawnmower_tracker/ros/include/ipa_lawnmower_tracker/: lawnmower_tracker.h
ipa_lawnmower_tracker/ros/launch/: lawnmower_tracker.launch
ipa_lawnmower_tracker/ros/launch/fiducials/: fiducials.launch  fiducials_lawnmower.yaml
ipa_lawnmower_tracker/ros/src/: lawnmower_tracker.cpp  lawnmower_tracker_node.cpp
