<package>
	<name>ipa_lawnmower_tracker</name>
	<version>0.1.0</version>
	<description>Tracking software for tagged mobile robots.</description>
	<license>LGPL</license>
	<url type="website">http://ros.org/wiki/ipa_lawnmower</url>
	<!-- <url type="bugtracker"></url> -->
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<buildtool_depend>catkin</buildtool_depend>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>libopencv-dev</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>cob_object_detection_msgs</build_depend>

	<build_depend>boost</build_depend>
	<build_depend>eigen</build_depend>
	
	<run_depend>libopencv-dev</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>cob_object_detection_msgs</run_depend>
	
	<run_depend>boost</run_depend>
	<run_depend>eigen</run_depend>

</package>


